# json_validator

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  cpplint.py  googleStyle.xml
lib/: array_validator.hpp  boolean_validator.hpp  int_validator.hpp  json_validator.hpp  object_validator.hpp  string_validator.hpp  validation_result.hpp  validator.hpp
lib/json_adapters/: adapter.hpp  cjson_adapter.hpp
tests/performance/: performance.cpp
tests/unit/: complete_functionality_test.cpp
